--- a/Ck.Server.Api/Ck.Server.Api.csproj
+++ b/Ck.Server.Api/Ck.Server.Api.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ck.Server.Infra.IoC\Ck.Server.Infra.IoC.csproj" />
+  </ItemGroup>
+
 </Project>
