--- a/Ck.Server.Application/Ck.Server.Application.csproj
+++ b/Ck.Server.Application/Ck.Server.Application.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ck.Server.Domain\Ck.Server.Domain.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
