--- a/Ck.Server.Infra.Data/Ck.Server.Infra.Data.csproj
+++ b/Ck.Server.Infra.Data/Ck.Server.Infra.Data.csproj
@@ -4,6 +4,12 @@
     <ProjectReference Include="..\Ck.Server.Domain\Ck.Server.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
