--- a/DockerFile
+++ b/DockerFile
@@ -1,10 +1,26 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine as build
-WORKDIR /app
-COPY . .
-RUN dotnet restore
-RUN dotnet publish -o /app/published-app
+# FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine as build
+# WORKDIR /app
+# COPY . .
+# RUN dotnet restore
+# RUN dotnet publish -o /app/published-app
 
-FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine as runtime
-WORKDIR /app
-COPY --from=build /app/published-app /app
-ENTRYPOINT [ "dotnet", "/app/DockerNetExample.dll" ]
+# FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine as runtime
+# WORKDIR /app
+# COPY --from=build /app/published-app /app
+# ENTRYPOINT [ "dotnet", "/app/DockerNetExample.dll" ]
+
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
+WORKDIR /Ck.Server
+
+# Copy everything
+COPY . ./
+# Restore as distinct layers
+RUN dotnet restore
+# Build and publish a release
+RUN dotnet publish -c Release -o out
+
+# Build runtime image
+FROM mcr.microsoft.com/dotnet/aspnet:6.0
+WORKDIR /Ck.Server.Api
+COPY --from=build-env /App/out .
+ENTRYPOINT ["dotnet", "Ck.Server.Api.dll"]
