feat: created validation for personDTO using fluent validator

--- a/Ck.Server.Application/Ck.Server.Application.csproj
+++ b/Ck.Server.Application/Ck.Server.Application.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Ck.Server.Domain\Ck.Server.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.4.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
