--- a/Ck.Server.Api/appsettings.json
+++ b/Ck.Server.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=chicktosa_db;User Id=postgres;Password=example;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
