fix: refactoring namespace of api, domain and application

--- a/Ck.Server.Infra.Data/Ck.Server.Infra.Data.csproj
+++ b/Ck.Server.Infra.Data/Ck.Server.Infra.Data.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Ck.Server.Domain\Ck.Server.Domain.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
