--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Ck.Server.Infra.IoC\Ck.Server.Infra.IoC.csproj" />
+    <ProjectReference Include="..\IoC\IoC.csproj" />
   </ItemGroup>
 
 </Project>
